--- a/apim.Rmd
+++ b/apim.Rmd
@@ -93,7 +93,7 @@ pairwise <- pairwise %>%
 We then estimate the two-intercept model:
 
 ```{r}
-# moderation <- gls(soc_comp_a ~ 
+# moderation <- gls(soc_comp_a ~
 #                     h12selfdir_a_ctr:gender_e_a:group +
 #                     h12selfdir_a_ctr:gender_e_p:group +
 #                     h12selfdir_p_ctr:gender_e_a:group +
@@ -113,10 +113,10 @@ We then estimate the two-intercept model:
 #                   data = pairwise,
 #                   correlation = corCompSymm(form = ~1|id),
 #                   na.action = na.omit)
-# 
+#
 # summary(moderation)
 # coef(summary(moderation))
-# 
+#
 # #actor gender by samesex (indicator variable)
 # moderation <- gls(soc_comp_a ~ gender_e_a:samesex +
 #                     h12selfdir_a_ctr:gender_e_a:samesex +
@@ -203,33 +203,33 @@ pairwise <- pairwise %>%
 ```
 
 ```{r}
-a_high <- gls(soc_comp_a ~ as.factor(group) +
-                h12selfdir_a_ctrhigh:as.factor(group) +
-                h12selfdir_p_ctr:as.factor(group) - 1,
+a_high <- gls(soc_comp_a ~ as.factor(samesex) +
+                h12selfdir_a_ctrhigh:as.factor(samesex) +
+                h12selfdir_p_ctr:as.factor(samesex) - 1,
               data = pairwise,
               correlation = corCompSymm(form = ~1|id))
 
 summary(a_high)
 
-a_low <- gls(soc_comp_a ~ as.factor(group) +
-                h12selfdir_a_ctrlow:as.factor(group) +
-                h12selfdir_p_ctr:as.factor(group) - 1,
+a_low <- gls(soc_comp_a ~ as.factor(samesex) +
+                h12selfdir_a_ctrlow:as.factor(samesex) +
+                h12selfdir_p_ctr:as.factor(samesex) - 1,
               data = pairwise,
               correlation = corCompSymm(form = ~1|id))
 
 summary(a_low)
 
-p_high <- gls(soc_comp_a ~ as.factor(group) +
-                h12selfdir_a_ctr:as.factor(group) +
-                h12selfdir_p_ctrhigh:as.factor(group) - 1,
+p_high <- gls(soc_comp_a ~ as.factor(samesex) +
+                h12selfdir_a_ctr:as.factor(samesex) +
+                h12selfdir_p_ctrhigh:as.factor(samesex) - 1,
               data = pairwise,
               correlation = corCompSymm(form = ~1|id))
 
 summary(p_high)
 
-p_low <- gls(soc_comp_a ~ as.factor(group) +
-                h12selfdir_a_ctr:as.factor(group) +
-                h12selfdir_p_ctrlow:as.factor(group) - 1 ,
+p_low <- gls(soc_comp_a ~ as.factor(samesex) +
+                h12selfdir_a_ctr:as.factor(samesex) +
+                h12selfdir_p_ctrlow:as.factor(samesex) - 1 ,
               data = pairwise,
               correlation = corCompSymm(form = ~1|id))
 
