--- a/apim.Rmd
+++ b/apim.Rmd
@@ -12,67 +12,90 @@ library(tidyverse)
 library(psych)
 library(nlme)
 library(mosaic)
+library(stargazer)
 
 ```
 
-Run the data_wrangling.Rmd so you have `pairwise` in your environment.
 
-# Basic model
-
-## Indistinguishable Dyads
-
-Here we have a model where gender of the actor and gender of the partner predict the perceived social competence of the child for the actor. 
-
-I attempted to create a model where the gender of the actor and the gender of the partner are interacted with group (so that we have gender and sexual orientation in the model), but I get an error (Error in glsEstimate(object, control = control) : computed "gls" fit is singular, rank 5).
-
-```{r baseline_model}
-apim <- gls(soc_comp_a ~ gender_e_a + gender_e_p,
-            data = pairwise,
-            correlation = corCompSymm(form = ~1|id),
-            na.action = na.omit)
-
-summary(apim)
-
-apim_intact <- gls(soc_comp_a ~ gender_e_a:group + gender_e_p:group,
-            data = pairwise,
-            correlation = corCompSymm(form = ~1|id),
-            na.action = na.omit)
-
-summary(apim_intact)
+```{r select_variables}
+Goldberg_gav_sm <- Goldberg_gav %>%
+  select(ID,
+         Partner,
+         group,
+         gender,
+         h12selfdir,
+         #h12conform,
+         SocComp
+         )
 ```
 
-ICC just gender: 0.6747253
-ICC gender and group: 0.6775821
+```{r subset_data}
+#exclude individuals who do not have data for parental values or social competence
 
-## Calculate R^2^
+#find the subset of dyads who have information for both people for all of the variables
+Goldberg_gav_completes <- Goldberg_gav_sm %>%
+  filter(!is.na(SocComp) & !is.na(h12selfdir)) %>%
+  group_by(ID) %>%
+  count() %>%
+  filter(n == 2)
 
-Calculate R-squared by taking the SSE of the model, dividing by the SSE of the empty model, and subtracting that from 1. Our baseline model does very very poorly. 
-
-```{r apim_empty}
-apim_empty <- gls(soc_comp_a ~ 1,
-                  data = pairwise,
-                  correlation = corCompSymm(form = ~1|id),
-                  na.action = na.omit)
-summary(apim_empty)
-
-r2_gender <- 1-(apim$sigma^2/apim_empty$sigma^2)
-r2_gender
+#join this subset with the full set of individuals
+Goldberg_gav_sm <- Goldberg_gav_sm %>%
+  inner_join(Goldberg_gav_completes, by = "ID")
 ```
 
-```{r r2_intact}
-r2_intact <- 1 - (apim_intact$sigma^2/apim_empty$sigma^2)
-r2_intact
+
+```{r impute_data}
+#impute gender 3 to gender 1
+Goldberg_gav_sm <- Goldberg_gav_sm %>%
+  #mutate(w11RelDur = ifelse(ID == 231 & Partner == 2, 7.0, w11RelDur)) %>%
+  mutate(gender = ifelse(gender == 3, 1, gender))
+
+#NA gender goes to 1
+Goldberg_gav_sm$gender[is.na(Goldberg_gav_sm$gender)] <- 1
 ```
-yikes this isn't going well
 
-## Interpretation of Model Estimates
+```{r}
+#Impute partner number for second person in dyad 53:
+Goldberg_gav_sm[38, 2] = 2
+#Impute partner number for second person in dyad 247:
+Goldberg_gav_sm[153, 2] = 1
 
-* *Intercept*: meaningless because not centered
+# Pairwise data
+tempA <- Goldberg_gav_sm %>%
+  mutate(
+    genderE = gender,
+    partnum = 1,
+    Partner = case_when(
+      Partner == 1 ~ "A",
+      Partner == 2 ~ "P")) %>%
+  select(-n) %>%
+  gather(variable, value, group:genderE) %>%
+  unite(var_partner, variable, Partner) %>%
+  spread(var_partner, value)
 
-* *actor variable*: I truly don't understand how to interpret this right now
+tempB <- Goldberg_gav_sm %>%
+  mutate(
+    genderE = gender,
+    partnum = 2,
+    Partner = case_when(
+      Partner == 1 ~ "P",
+      Partner == 2 ~ "A")) %>%
+  select(-n, -gender, group) %>%
+  gather(variable, value, group:genderE) %>%
+  unite(var_partner, variable, Partner) %>%
+  spread(var_partner, value)
 
-* *partner variable*:
- 
+pairwise <- bind_rows(tempA, tempB) %>%
+  select(-gender_A, -gender_P, -group_P) %>%
+  rename(group = group_A) %>%
+  arrange(ID) %>%
+  janitor::clean_names()
+
+
+```
+
+
 
 # Moderator 
 
@@ -93,40 +116,6 @@ pairwise <- pairwise %>%
 We then estimate the two-intercept model:
 
 ```{r}
-# moderation <- gls(soc_comp_a ~
-#                     h12selfdir_a_ctr:gender_e_a:group +
-#                     h12selfdir_a_ctr:gender_e_p:group +
-#                     h12selfdir_p_ctr:gender_e_a:group +
-#                     h12selfdir_p_ctr:gender_e_p:group,
-#                   data = pairwise,
-#                   correlation = corCompSymm(form = ~1|id),
-#                   na.action = na.omit)
-# 
-# summary(moderation)
-# coef(summary(moderation))
-
-# #Randi added
-# #actor gender by partner gender
-# moderation <- gls(soc_comp_a ~ gender_e_a:gender_e_p +
-#                     h12selfdir_a_ctr:gender_e_a:gender_e_p +
-#                     h12selfdir_p_ctr:gender_e_p:gender_e_p,
-#                   data = pairwise,
-#                   correlation = corCompSymm(form = ~1|id),
-#                   na.action = na.omit)
-#
-# summary(moderation)
-# coef(summary(moderation))
-#
-# #actor gender by samesex (indicator variable)
-# moderation <- gls(soc_comp_a ~ gender_e_a:samesex +
-#                     h12selfdir_a_ctr:gender_e_a:samesex +
-#                     h12selfdir_p_ctr:gender_e_p:samesex,
-#                   data = pairwise,
-#                   correlation = corCompSymm(form = ~1|id),
-#                   na.action = na.omit)
-# 
-# summary(moderation)
-# coef(summary(moderation))
 
 #simply use the group variable
 moderation <- gls(soc_comp_a ~ as.factor(group) +
@@ -139,57 +128,25 @@ moderation <- gls(soc_comp_a ~ as.factor(group) +
 summary(moderation)
 coef(summary(moderation))
 
-moderation <- gls(soc_comp_a ~ as.factor(samesex) +
+moderation2 <- gls(soc_comp_a ~ as.factor(samesex) +
                     h12selfdir_a_ctr:as.factor(samesex) +
                     h12selfdir_p_ctr:as.factor(samesex) - 1,
                   data = pairwise,
                   correlation = corCompSymm(form = ~1|id),
                   na.action = na.omit)
 
-summary(moderation)
-coef(summary(moderation))
+summary(moderation2)
+coef(summary(moderatio2n))
 
-moderation <- gls(soc_comp_a ~ h12selfdir_a_ctr*as.factor(samesex) +
+moderation_test <- gls(soc_comp_a ~ h12selfdir_a_ctr*as.factor(samesex) +
                     h12selfdir_p_ctr*as.factor(samesex),
                   data = pairwise,
                   correlation = corCompSymm(form = ~1|id),
                   na.action = na.omit)
 
-summary(moderation)
+summary(moderation_test)
 
-coef(summary(moderation))
-```
-
-```{r conformity}
-# moderation <- gls(soc_comp_a ~ as.factor(group) +
-#                     h12conform_a_ctr:as.factor(group) +
-#                     h12conform_p_ctr:as.factor(group) - 1,
-#                   data = pairwise,
-#                   correlation = corCompSymm(form = ~1|id),
-#                   na.action = na.omit)
-# 
-# summary(moderation)
-# coef(summary(moderation))
-# 
-# moderation <- gls(soc_comp_a ~ as.factor(samesex) +
-#                     h12conform_a_ctr:as.factor(samesex) +
-#                     h12conform_p_ctr:as.factor(samesex) - 1,
-#                   data = pairwise,
-#                   correlation = corCompSymm(form = ~1|id),
-#                   na.action = na.omit)
-# 
-# summary(moderation)
-# coef(summary(moderation))
-# 
-# moderation <- gls(soc_comp_a ~ h12conform_a_ctr*as.factor(samesex) +
-#                     h12conform_p_ctr*as.factor(samesex),
-#                   data = pairwise,
-#                   correlation = corCompSymm(form = ~1|id),
-#                   na.action = na.omit)
-# 
-# summary(moderation)
-# 
-# coef(summary(moderation))
+coef(summary(moderation_test))
 ```
 
 
@@ -235,4 +192,13 @@ p_low <- gls(soc_comp_a ~ as.factor(samesex) +
 
 summary(p_low)
 ```
+
+```{r}
+stargazer(moderation2, title="Regression results for parental values of self-direction",
+align=TRUE, dep.var.labels=c("Perception of child's social competence"), covariate.labels=c("Heterosexual couples","Same-sex couples",
+"Heterosexual couple actor effect","Same-sex couple actor effect", "Heterosexual couple partner effect","Same-sex couple partner effect"),
+ no.space=TRUE, single.row=TRUE, keep.stat = c("rsq", "ser", "n"), type = "latex")
+```
+
+
 
