--- a/r-references.bib
+++ b/r-references.bib
@@ -106,3 +106,66 @@
   note = {R package version 1.2.1},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
+@Manual{R-ggformula,
+  title = {ggformula: Formula Interface to the Grammar of Graphics},
+  author = {Daniel Kaplan and Randall Pruim},
+  year = {2019},
+  note = {R package version 0.9.2},
+  url = {https://CRAN.R-project.org/package=ggformula},
+}
+@Manual{R-ggstance,
+  title = {ggstance: Horizontal 'ggplot2' Components},
+  author = {Lionel Henry and Hadley Wickham and Winston Chang},
+  year = {2019},
+  note = {R package version 0.3.3},
+  url = {https://CRAN.R-project.org/package=ggstance},
+}
+@Book{R-lattice,
+  title = {Lattice: Multivariate Data Visualization with R},
+  author = {Deepayan Sarkar},
+  publisher = {Springer},
+  address = {New York},
+  year = {2008},
+  note = {ISBN 978-0-387-75968-5},
+  url = {http://lmdvr.r-forge.r-project.org},
+}
+@Manual{R-Matrix,
+  title = {Matrix: Sparse and Dense Matrix Classes and Methods},
+  author = {Douglas Bates and Martin Maechler},
+  year = {2019},
+  note = {R package version 1.2-17},
+  url = {https://CRAN.R-project.org/package=Matrix},
+}
+@Article{R-mosaic,
+  author = {Randall Pruim and Daniel T Kaplan and Nicholas J Horton},
+  title = {The mosaic Package: Helping Students to 'Think with Data' Using R},
+  journal = {The R Journal},
+  volume = {9},
+  number = {1},
+  pages = {77--102},
+  year = {2017},
+  url = {https://journal.r-project.org/archive/2017/RJ-2017-024/index.html},
+}
+@Manual{R-mosaicData,
+  title = {mosaicData: Project MOSAIC Data Sets},
+  author = {Randall Pruim and Daniel Kaplan and Nicholas Horton},
+  year = {2018},
+  note = {R package version 0.17.0},
+  url = {https://CRAN.R-project.org/package=mosaicData},
+}
+@Manual{R-nlme,
+  title = {{nlme}: Linear and Nonlinear Mixed Effects Models},
+  author = {Jose Pinheiro and Douglas Bates and Saikat DebRoy and Deepayan Sarkar and {R Core Team}},
+  year = {2019},
+  note = {R package version 3.1-140},
+  url = {https://CRAN.R-project.org/package=nlme},
+}
+@Manual{R-stargazer,
+  title = {stargazer: Well-Formatted Regression and Summary Statistics Tables},
+  author = {Marek Hlavac},
+  year = {2018},
+  note = {R package version 5.2.2},
+  organization = {Central European Labour Studies Institute (CELSI)},
+  address = {Bratislava, Slovakia},
+  url = {https://CRAN.R-project.org/package=stargazer},
+}
