--- a/references.bib
+++ b/references.bib
@@ -506,3 +506,10 @@ year={2008},
 publisher={Paul H Brookes Publishing}
 }
 
+@book{kenny2006dyadic,
+  title={Dyadic data analysis},
+  author={Kenny, David A and Kashy, Deborah A and Cook, William L},
+  year={2006},
+  publisher={Guilford press}
+}
+
